# ghswitch-cli

./: CHANGELOG.md  README.md  ghswitch.py  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: conftest.py  test_cli.py  test_unit.py
